# tabletcraft

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  app.py  pyproject.toml
.github/workflows/: ci.yml
cuneiscribe/: __init__.py  core.py
cuneiscribe/interfaces/: cli.py  demo.py
cuneiscribe/knowledge/: cuneiform.py  transliteration_mapping.json
cuneiscribe/models/: translator.py
cuneiscribe/pipeline/: batch.py  classifier.py  metrics.py  validator.py
docs/: index.html
knowledge/sign_tables/: sign_readings.json
models/byt5-base-akkadian/: config.json
paper/: SUBMISSION_ANALYSIS.md  main.tex  references.bib
paper/figures/: figure1_desc.md
scripts/: inference_mbr.py  postprocess.py  train_optimized.py
tabletcraft/: __init__.py  core.py
tabletcraft/interfaces/: cli.py  demo.py  renderer.py
tabletcraft/knowledge/: cuneiform.py
tabletcraft/pipeline/: batch.py  metrics.py  validator.py
tests/: test_batch.py  test_pipeline.py
